[tool.poetry]
name = "mobile-api-cards-resource"
version = "0.0.0"
description = "mobile-api-lambdas"
repository = "https://github.com/upside-services/mobile-api-lambdas/"
authors = ["GetUpside <info@getupside.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "jfrog"
url = "https://upside.jfrog.io/upside/api/pypi/upside-python/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-context = "~=1.1"
boto3 = "~=1.21"
lib-api-gateway = "^3.5.0"
lib-mobile-api = "^3.70.0"
receiptless-service-client = "~=0.75"
upside-core = "^9.2.0"
user-service-client = "^3.25.0"
mapi-common = {path = "../mapi_common/", develop = true}

[tool.poetry.dev-dependencies]
coverage = "6.2"
pytest = "*"
pytest-cov = "*"
mock = "*"
lib-test = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
