[tool.poetry]
name = "mobile-api-cash-out-destinations-resource"
version = "0.0.0"
description = "mobile-api-lambdas"
repository = "https://github.com/upside-services/mobile-api-lambdas/"
authors = ["GetUpside <info@getupside.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "jfrog"
url = "https://upside.jfrog.io/upside/api/pypi/upside-python/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-context = "~=1.1.0"
aws-lambda-powertools = { extras = ["all"], version = "^2.11.0" }
cash-out-service-client = "^0.16.0"
dwollav2 = "~=2.1.0"
lib-mobile-api = "^3.70.0"
lib-segment-python = "^2.1.0"
payment-info-service-client = "^1.69.0"
plaid-python = "~=7.2.1"
mapi-common = {path = "../mapi_common/", develop = true}

[tool.poetry.dev-dependencies]
coverage = "*"
pytest = "*"
pytest-cov = "*"
mock = "*"
lib-test = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
