[tool.poetry]
name = "mobile-api-check-in-offer"
version = "0.0.0"
description = "mobile-api-lambdas"
repository = "https://github.com/upside-services/mobile-api-lambdas/"
authors = ["GetUpside <info@getupside.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "jfrog"
url = "https://upside.jfrog.io/upside/api/pypi/upside-python/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.9"
lib-mobile-api = "^3.70.0"
lib-mapi-user-offer = "^0.10.2"
lib-metrics = "^1.2.1"
mapi-common = {path = "../mapi_common/", develop = true}

[tool.poetry.dev-dependencies]
freezegun = "*"
lib-test = "*"
mock = "*"
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
