[tool.poetry]
name = "mobile-api-components-resource"
version = "0.0.0"
description = "mobile-api-lambdas"
repository = "https://github.com/upside-services/mobile-api-lambdas/"
authors = ["GetUpside <info@getupside.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "jfrog"
url = "https://upside.jfrog.io/upside/api/pypi/upside-python/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-context = "~=1.1"
boto3 = "~=1.4"
lib-mobile-api = "^3.70.0"
lib-upside-resource = "~=0.8"
python-json-logger = "~=2.0"
upside-core = "^9.2.0"
runbook-service-client = "~=3.58.0"
redis = "~=3.5"
user-trait-service-client = "^3.0.0"
mapi-common = {path = "../mapi_common/", develop = true}

[tool.poetry.dev-dependencies]
pytest = "~=5.4"
pytest-cov = "~=2.8"
mock = "~=4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
