[tool.poetry]
name = "mobile-api-create-site-request"
version = "0.0.0"
description = "mobile-api-lambdas"
repository = "https://github.com/upside-services/mobile-api-lambdas/"
authors = ["GetUpside <info@getupside.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "jfrog"
url = "https://upside.jfrog.io/upside/api/pypi/upside-python/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "~=1.18"
lib-api-gateway = "~=3.1"
python-json-logger = "~=2.0"
mapi-common = {path = "../mapi_common/", develop = true}
lib-mobile-api = "^3.70.0"

[tool.poetry.dev-dependencies]
coverage = "6.2"
pytest = "*"
pytest-cov = "*"
mock = "*"
lib-test = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
