[tool.poetry]
name = "mobile-api-extract-fields"
version = "0.0.0"
description = "mobile-api-lambdas"
repository = "https://github.com/upside-services/mobile-api-lambdas/"
authors = ["GetUpside <info@getupside.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "jfrog"
url = "https://upside.jfrog.io/upside/api/pypi/upside-python/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.9"
future = "^0.18.2"
fuzzywuzzy = "^0.18.0"
lib-api-gateway = "^3.6.0"
lib-mobile-api = "^3.70.0"
merchant-service-client = "^2.7.2"
numpy = "^1.23.0"
ocr-field-extraction = "^4.4.0"
offer-service-client = "~=1.185"
python-json-logger = "~=2.0"
upside-core = "^9.2.0"
user-service-client = "^3.25.0"
mapi-common = {path = "../mapi_common/", develop = true}

[tool.poetry.dev-dependencies]
coverage = "*"
pytest = "*"
pytest-cov = "*"
mock = "*"
lib-test = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
