[tool.poetry]
name = "mobile-api-get-gift-cards"
version = "0.0.0"
description = "mobile-api-lambdas"
repository = "https://github.com/upside-services/mobile-api-lambdas/"
authors = ["GetUpside <info@getupside.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "jfrog"
url = "https://upside.jfrog.io/upside/api/pypi/upside-python/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.9"
lib_api_gateway = "^3.6.0"
lib-mobile-api = "^3.70.0"
mapi-common = {path = "../mapi_common/", develop = true}

[tool.poetry.dev-dependencies]
coverage = "*"
pytest = "*"
pytest-cov = "*"
mock = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"