[tool.poetry]
name = "mobile-api-native-sign-in"
version = "0.0.0"
description = "mobile-api-lambdas"
repository = "https://github.com/upside-services/mobile-api-lambdas/"
authors = ["GetUpside <info@getupside.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "jfrog"
url = "https://upside.jfrog.io/upside/api/pypi/upside-python/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-context = "~=1.1"
boto3 = "^1.9"
lib-api-gateway = "^3.9"
lib-metrics = "^0.1"
lib-mobile-api = "^3.70.0"
upside-core = "^9.2.0"
upside-model = "^6.31.0"
user-service-client = "^3.25.0"
user-trait-service-client="^2.8"
mapi-common = {path = "../mapi_common/", develop = true}

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
mock = "*"
lib-test = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
