[tool.poetry]
name = "mobile-api-update-mobile-push"
version = "0.0.0"
description = "mobile-api-lambdas"
repository = "https://github.com/upside-services/mobile-api-lambdas/"
authors = ["GetUpside <info@getupside.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "jfrog"
url = "https://upside.jfrog.io/upside/api/pypi/upside-python/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.9"
account-service-client = "^3.1.1"
attribute-service-client = "^2.0.0"
ledger-service-client = "~=1.7"
lib-api-gateway = "^3.5.0"
lib-mobile-api = "^3.70.0"
python-json-logger = "^2.0.4"
payment-info-service-client = "^1.69.0"
simplejson = "==3.17.0"
upside-core = "^9.2.0"
user-service-client = "^3.25.0"
mapi-common = {path = "../mapi_common/", develop = true}

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
mock = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"