[tool.poetry]
name = "mobile-api-upload-receipt-image"
version = "0.0.0"
description = "mobile-api-lambdas"
repository = "https://github.com/upside-services/mobile-api-lambdas/"
authors = ["GetUpside <info@getupside.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "jfrog"
url = "https://upside.jfrog.io/upside/api/pypi/upside-python/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "~=1.9"
lib-api-gateway = "^3.5.0"
lib-mobile-api = "^3.70.0"
offer-service-client = "^1.200.0"
python-json-logger = "^2.0.4"
simplejson = "3.17.0"
upside-core = "^9.2.0"
user-service-client = "^3.25.0"
lib-mapi-user-offer = "^0.10.2"
lib-metrics = "^1.2.1"
mapi-common = {path = "../mapi_common/", develop = true}

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
mock = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"